--- a/config.env
+++ b/config.env
@@ -3,11 +3,11 @@ CONFIG_ENV=config.env
 #一般来说只需要按实际需要修改5－20行的相关内容就可以。包含18个工作流可同时工作可最大化提高编译内核的成功率，助力LXC,KernelSU 。
 #工具链集包含AOSP clang ,LLVM, ARM gcc ,SD-clang(高通的llvm工具链）,Proton-clang, ZyC clang,linaro gcc ,Eva gcc ,Google gcc_4.9 ,Android NDK ,arter97_gcc等
 #内核源地址
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
+KERNEL_SOURCE=https://github.com/heihaing/android_kernel_xiaomi_lmi
 #分支
-KERNEL_SOURCE_BRANCH=twrp-12
+KERNEL_SOURCE_BRANCH=sunflowerleaf
 #内核配置文件
-KERNEL_CONFIG=vendor/wayne_defconfig
+KERNEL_CONFIG=lmi_defconfig
 
 #Kali-Nethunter支持，默认关闭，支持内核版本4.4-4.19。旧的内核版本或补丁失败的参考kali官方补丁https://gitlab.com/kalilinux/nethunter/build-scripts/kali-nethunter-kernel
 #仅Build kernel by clang-r383902b支持。https://www.kali.org/docs/nethunter/nethunter-kernel-2-config-1/
@@ -16,9 +16,9 @@ ENABLE_NETHUNTER=false
 #LXC_Docker启用，默认启用。对此项对build-kernel.yml无效，因为build-kernel.yml是官方版，未作任何修改。
 ENABLE_LXC=true
 #KernelSU相关，默认关闭。若需要KernelSU，则修改前3项值为true
-ENABLE_KERNELSU=false
-ADD_KPROBES_CONFIG=false 
-ADD_OVERLAYFS_CONFIG=false
+ENABLE_KERNELSU=true
+ADD_KPROBES_CONFIG=true 
+ADD_OVERLAYFS_CONFIG=true
 KERNELSU_TAG=main
 
 #这块几乎可以不动，KERNEL_IMAGE_NAME可能的取值有Image.gz-dtb,Image.gz,Image等
@@ -203,5 +203,5 @@ DISABLE_CC_WERROR=true
 NEED_DTBO=false
 
 # Build boot images
-BUILD_BOOT_IMG=false
-SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
+BUILD_BOOT_IMG=true
+SOURCE_BOOT_IMAGE=http://oarmdata.250860.xyz:5801/download/MIUI13.0.5/boot_magisk.img
