--- a/config.env
+++ b/config.env
@@ -204,4 +204,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=true
-SOURCE_BOOT_IMAGE=http://oarmdata.250860.xyz:5801/download/MIUI13.0.5/boot_magisk.img
+SOURCE_BOOT_IMAGE=http://oarmdata.250860.xyz:5801/download/MIUI13.0.5/boot.img
